# claudecloudcomfy

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  REFERENCE.md  comfy.sh  pyproject.toml
.github/workflows/: test.yml
mcp_server/: __main__.py  config.py  music_video.py  production_doc.py  server.py  web.py
mcp_server/static/: index.html
presets/: ltx23-a2v.json  ltx23-a2v_workflow.json  ltx23-i2v.json  multi-angles.json  multi-angles_workflow.json  qwen-edit-2ref.json  qwen-edit-2ref_workflow.json  qwen-edit-3ref.json  qwen-edit-3ref_workflow.json  qwen-edit.json  wan22-i2v.json  wan22-i2v_workflow.json  z-turbo.json
tests/: test_server.py
workflows/: cogvideo_i2v.json  cogvideo_t2v.json  hunyuan_t2v.json  ltx23_flf2v.json  ltx_t2v.json  mochi_t2v.json  qwen_multi_wan22_pipeline.json  wan_i2v_14b.json  wan_skyreels_t2v.json  wan_t2v_14b.json  wan_t2v_1_3b_fast.json
