[project]
name = "comfy-mcp"
version = "0.1.0"
description = "MCP server for Comfy Cloud creative agent"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai-whisper>=20250625",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
