[project]
name = "comfy-mcp"
version = "0.1.0"
description = "MCP server for Comfy Cloud creative agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "fpdf2>=2.8.0",
    "librosa>=0.11.0",
    "mcp[cli]>=1.0.0",
    "openai-whisper>=20250625",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
